--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
 <body>
     <h1><span>&lt;/</span>datepicker<span>S&gt;</span></h1>
-
-    <date-picker format="F d (D), Y" date="2021-12-05" position="top" visible="false"></date-picker>
-    <date-picker format="Y/m/d" date="" position="top" visible="false"></date-picker>
-    <date-picker format="l jS F Y" date="" position="top" visible="false"></date-picker>
+    <date-picker format="F d (D), Y" date="" position="top" visible="false"></date-picker>
     <!-- <script type="module" src="scripts/date-picker.js"></script> -->
 </body>
 
