Add footer element

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <h1><span>&lt;/</span>datepicker<span>S&gt;</span></h1>
     <date-picker format="F jS (D), Y" date="" position="top" visible="false"></date-picker>
     <!-- <script type="module" src="scripts/date-picker.js"></script> -->
+    <footer>
+        <p>created with <span class="heart">&lt;3</span> by <span>&lt;/</span><a
+                href="https://nazares.ru">nazare<span>S&gt;</span></a></p>
+    </footer>
 </body>
 
 </html>
