--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
     <script defer src="/scripts/dist/datepicker.min.js"></script>
-    <title>Document</title>
+    <title>Datepicker</title>
 </head>
 
 <body>
