--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1><span>&lt;/</span>datepicker<span>S&gt;</span></h1>
     <date-picker format="F jS (D), Y"></date-picker>
-    <date-picker format="D, d M Y"></date-picker>
+    <date-picker format="D, d M Y" position="right"></date-picker>
     <!-- <script type="module" src="scripts/date-picker.js"></script> -->
     <footer>
         <p>created with <span class="heart">&lt;3</span> by <span>&lt;/</span><a
