add datepickers with different position

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <date-picker format="F jS (D), Y" postname="date1"></date-picker>
         <!-- <input type="text" name="date2" value="" placeholder="date from 2nd datepicker" hidden> -->
         <date-picker format="D, d M Y" position="right" postname="date2"></date-picker>
+        <date-picker format="D, d M Y" position="left" postname="date3"></date-picker>
+        <date-picker format="D, d M Y" position="top" postname="date4"></date-picker>
         <!-- <input type="submit" value="Send"> -->
         <!-- </form> -->
         <!-- <script type="module" src="scripts/date-picker.js"></script> -->
