add some styles

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
         <!-- POST data from web component using PHP -->
         <!-- <form action="" method="post"> -->
         <!-- <input type="text" name="date1" value="" placeholder="date from 1st datepicker" hidden> -->
+        <p>position: <strong>bottom</strong> (by default)</p>
         <date-picker format="F jS (D), Y" postname="date1"></date-picker>
         <!-- <input type="text" name="date2" value="" placeholder="date from 2nd datepicker" hidden> -->
+        <p>position: <strong>right</strong></p>
         <date-picker format="D, d M Y" position="right" postname="date2"></date-picker>
-        <date-picker format="D, d M Y" position="left" postname="date3"></date-picker>
-        <date-picker format="D, d M Y" position="top" postname="date4"></date-picker>
+        <p>position: <strong>left</strong></p>
+        <date-picker format="Y-m-d" position="left" postname="date3"></date-picker>
+        <p>position: <strong>top</strong></p>
+        <date-picker format="d/m/Y" position="top" postname="date4"></date-picker>
         <!-- <input type="submit" value="Send"> -->
         <!-- </form> -->
         <!-- <script type="module" src="scripts/date-picker.js"></script> -->
