add link to source code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script defer src="/scripts/dist/datepicker.min.js"></script>
     <title>Datepicker</title>
 </head>
@@ -25,6 +26,11 @@
         <date-picker format="Y-m-d" position="left" postname="date3"></date-picker>
         <p>position: <strong>top</strong></p>
         <date-picker format="d/m/Y" position="top" postname="date4"></date-picker>
+        <span class="gh-link">
+            source code on:&nbsp;
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/nazares/datepicker">nazares</a>
+        </span>
         <!-- <input type="submit" value="Send"> -->
         <!-- </form> -->
         <!-- <script type="module" src="scripts/date-picker.js"></script> -->
